--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/http/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node build/http/server.js"
   },
   "author": "",
   "license": "ISC",
